[feat] 문제 진입 시 해당 퀴즈 이름, 대표 이미지 보여주기 & 타이머 설정하기 (#17)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>나도 나영석 :: 직접 만드는 인물퀴즈</title>
   </head>
   <body>
+    <div id="modal-root"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
