--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta content="website" property="og:type" />
+    <meta content="나영석 게임" property="og:title" />
+    <meta content="직접 만드는 인물퀴즈" property="og:description" />
+    <meta content="https://nayeongseokgame.site/" property="og:url" />
+    <meta content="/favicon.ico" property="og:image" />
+    <link href="/favicon.ico" rel="icon" type="image/x-icon" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>나도 나영석 :: 직접 만드는 인물퀴즈</title>
   </head>
   <body>
     <div id="modal-root"></div>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script src="/src/main.tsx" type="module"></script>
   </body>
 </html>
